change from List.of() to Arrays.asList() in the Hangman